--- a/templates/CustomColumnsOverride/apps.v1.deployments.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.deployments.yaml
@@ -83,7 +83,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
-      name: "default-apps.v1.deployments"
+      name: "stock-cluster-apps.v1.deployments"
     spec:
       additionalPrinterColumns:
         - jsonPath: .metadata.name
@@ -116,6 +116,42 @@ items:
           value: "-"
         - key: Pod Selector
           value: "-"
-      id: "default-/apps/v1/deployments"
+      id: "stock-cluster-/apps/v1/deployments"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: CustomColumnsOverride
+    metadata:
+      name: "stock-namespace-apps.v1.deployments"
+    spec:
+      additionalPrinterColumns:
+        - jsonPath: .metadata.name
+          name: Name
+          type: string
+        - jsonPath: .metadata.labels
+          name: Labels
+          type: string
+        - jsonPath: .spec.template.metadata.labels
+          name: Pod Selector
+          type: string
+        - jsonPath: .status.conditions[?(@.type=="Available")].status
+          name: Status
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Created
+          type: date
+      additionalPrinterColumnsTrimLengths:
+        - key: Name
+          value: 64
+        - key: Labels
+          value: 1
+        - key: Pod Selector
+          value: 1
+      additionalPrinterColumnsUndefinedValues:
+        - key: Labels
+          value: "-"
+        - key: Pod Selector
+          value: "-"
+      id: "stock-namespace-/apps/v1/deployments"
+
 kind: List
 metadata:
