--- a/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
@@ -57,7 +57,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
-      name: "default-apps.v1.statefulsets"
+      name: "stock-cluster-apps.v1.statefulsets"
     spec:
       additionalPrinterColumns:
         - jsonPath: .metadata.name
@@ -85,6 +85,37 @@ items:
           value: 1
         - key: Pod Selector
           value: 1
-      id: "default-/apps/v1/statefulsets"
+      id: "stock-cluster-/apps/v1/statefulsets"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: CustomColumnsOverride
+    metadata:
+      name: "stock-namespace-apps.v1.statefulsets"
+    spec:
+      additionalPrinterColumns:
+        - jsonPath: .metadata.name
+          name: Name
+          type: string
+        - jsonPath: .metadata.labels
+          name: Labels
+          type: string
+        - jsonPath: .spec.template.metadata.labels
+          name: Pod Selector
+          type: string
+        - jsonPath: .status.conditions[?(@.type=="Available")].status
+          name: Status
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Created
+          type: date
+      additionalPrinterColumnsTrimLengths:
+        - key: Name
+          value: 64
+        - key: Labels
+          value: 1
+        - key: Pod Selector
+          value: 1
+      id: "stock-namespace-/apps/v1/statefulsets"
+
 kind: List
 metadata:
