--- a/templates/CustomColumnsOverride/batch.v1.jobs.yaml
+++ b/templates/CustomColumnsOverride/batch.v1.jobs.yaml
@@ -3,7 +3,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
-      name: "default-batch.v1.jobs"
+      name: "stock-cluster-batch.v1.jobs"
     spec:
       additionalPrinterColumns:
         - jsonPath: .metadata.name
@@ -41,7 +41,47 @@ items:
           value: "-"
         - key: Starting deadline seconds
           value: "-"
-      id: "default-/batch/v1/jobs"
+      id: "stock-cluster-/batch/v1/jobs"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: CustomColumnsOverride
+    metadata:
+      name: "stock-namespace-batch.v1.jobs"
+    spec:
+      additionalPrinterColumns:
+        - jsonPath: .metadata.name
+          name: Name
+          type: string
+        - jsonPath: .spec.manualSelector
+          name: Manual selector
+          type: string
+        - jsonPath: .spec.backoffLimit
+          name: Backoff limit
+          type: string
+        - jsonPath: .spec.completions
+          name: Completions
+          type: string
+        - jsonPath: .spec.parallelism
+          name: Parallelism
+          type: string
+        - jsonPath: .spec.completionMode
+          name: Completion mode
+          type: string
+        - jsonPath: .spec.suspend
+          name: Suspend
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Created
+          type: date
+      additionalPrinterColumnsTrimLengths:
+        - key: Name
+          value: 64
+      additionalPrinterColumnsUndefinedValues:
+        - key: Namespace
+          value: "-"
+        - key: Starting deadline seconds
+          value: "-"
+      id: "stock-namespace-/batch/v1/jobs"
 
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
