--- a/templates/CustomColumnsOverride/v1.configmaps.yaml
+++ b/templates/CustomColumnsOverride/v1.configmaps.yaml
@@ -3,7 +3,30 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
-      name: "default-v1.configmaps"
+      name: "stock-cluster-v1.configmaps"
+    spec:
+      additionalPrinterColumns:
+        - jsonPath: .metadata.name
+          name: Name
+          type: string
+        - jsonPath: .metadata.namespace
+          name: Namespace
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Created
+          type: date
+      additionalPrinterColumnsTrimLengths:
+        - key: Name
+          value: 64
+      additionalPrinterColumnsUndefinedValues:
+        - key: Namespace
+          value: "-"
+      id: "stock-cluster-/v1/configmaps"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: CustomColumnsOverride
+    metadata:
+      name: "stock-namespace-v1.configmaps"
     spec:
       additionalPrinterColumns:
         - jsonPath: .metadata.name
@@ -15,10 +38,7 @@ items:
       additionalPrinterColumnsTrimLengths:
         - key: Name
           value: 64
-      additionalPrinterColumnsUndefinedValues:
-        - key: Namespace
-          value: "-"
-      id: "default-/v1/configmaps"
+      id: "stock-namespace-/v1/configmaps"
 
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
