--- a/templates/CustomColumnsOverride/v1.secrets.yaml
+++ b/templates/CustomColumnsOverride/v1.secrets.yaml
@@ -3,27 +3,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
-      name: "default-v1.secrets"
-    spec:
-      additionalPrinterColumns:
-        - jsonPath: .metadata.name
-          name: Name
-          type: string
-        - jsonPath: .type
-          name: Type
-          type: string
-        - jsonPath: .metadata.creationTimestamp
-          name: Created
-          type: date
-      additionalPrinterColumnsTrimLengths:
-        - key: Name
-          value: 64
-      id: "default-/v1/secrets"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: CustomColumnsOverride
-    metadata:
-      name: "cluster-v1.secrets"
+      name: "stock-cluster-v1.secrets"
     spec:
       additionalPrinterColumns:
         - jsonPath: .metadata.name
@@ -41,9 +21,29 @@ items:
       additionalPrinterColumnsTrimLengths:
         - key: Name
           value: 64
+      id: "stock-cluster-/v1/secrets"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: CustomColumnsOverride
+    metadata:
+      name: "stock-namespace-v1.secrets"
+    spec:
+      additionalPrinterColumns:
+        - jsonPath: .metadata.name
+          name: Name
+          type: string
+        - jsonPath: .type
+          name: Type
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Created
+          type: date
+      additionalPrinterColumnsTrimLengths:
+        - key: Name
+          value: 64
       additionalPrinterColumnsUndefinedValues:
         - key: Namespace
           value: "-"
-      id: "cluster-/v1/secrets"
+      id: "stock-namespace-/v1/secrets"
 kind: List
 metadata:
