--- a/templates/CustomColumnsOverride/v1.services.yaml
+++ b/templates/CustomColumnsOverride/v1.services.yaml
@@ -3,7 +3,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
-      name: default-v1.services
+      name: stock-cluster-v1.services
     spec:
       additionalPrinterColumns:
         - jsonPath: .metadata.name
@@ -37,7 +37,46 @@ items:
           value: 1
         - key: Pod Selector
           value: 1
-      id: default-/v1/services
+      id: stock-cluster-/v1/services
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: CustomColumnsOverride
+    metadata:
+      name: stock-namespace-v1.services
+    spec:
+      additionalPrinterColumns:
+        - jsonPath: .metadata.name
+          name: Name
+          type: string
+        - jsonPath: .spec.clusterIP
+          name: ClusterIP
+          type: string
+        - jsonPath: .spec.loadBalancerIP
+          name: LoadbalancerIP
+          type: string
+        - jsonPath: .metadata.labels
+          name: Labels
+          type: string
+        - jsonPath: .spec.selector
+          name: Pod Selector
+          type: string
+      additionalPrinterColumnsUndefinedValues:
+        - key: ClusterIP
+          value: "-"
+        - key: LoadbalancerIP
+          value: "-"
+        - key: Labels
+          value: "-"
+        - key: Pod Selector
+          value: "-"
+      additionalPrinterColumnsTrimLengths:
+        - key: Name
+          value: 64
+        - key: Labels
+          value: 1
+        - key: Pod Selector
+          value: 1
+      id: stock-namespace-/v1/services
 
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
@@ -58,28 +97,6 @@ items:
           name: Pod port or name
           type: string
       id: factory-service-details-port-mapping
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: CustomColumnsOverride
-    metadata:
-      name: factory-service-details-address-list
-    spec:
-      additionalPrinterColumns:
-        - jsonPath: "$"
-          name: ClusterIPs
-          type: string
-
-      additionalPrinterColumnsUndefinedValues:
-        - key: ClusterIPs
-          value: "-"
-        - key: LoadbalancerIPs
-          value: "-"
-      additionalPrinterColumnsTrimLengths:
-        - key: ClusterIPs
-          value: 1
-        - key: LoadbalancerIPs
-          value: 1
-      id: factory-service-details-address-list
 
 kind: List
 metadata:
