--- a/templates/Factory/namespace-details.yaml
+++ b/templates/Factory/namespace-details.yaml
@@ -197,6 +197,7 @@ items:
                                             data:
                                               id: 36022
                                               text: "{reqs[0]['metadata', 'creationTimestamp']['-']}"
+                                              formatter: timestamp
 
                                   - type: antdFlex
                                     data:
