--- a/templates/Factory/node-details.yaml
+++ b/templates/Factory/node-details.yaml
@@ -50,13 +50,20 @@ items:
 
             - type: StatusText
               data:
-                id: 4000121221
-                requestIndex: 0
-                jsonPath: ".status.conditions[?(@.type == 'Ready')].status"
-                criteria: equals
-                valueToCompare: "True"
-                successText: Available
-                errorText: Not available
+                id: 40001217777
+                value: "{reqsJsonPath[0]['.status.conditions[?(@.status=='True')].reason']['-']}"
+                criteriaSuccess: equals
+                valueToCompareSuccess:
+                  - "KubeletReady"
+                criteriaError: equals
+                valueToCompareError:
+                  - "KubeletHasSufficientMemory"
+                  - "KubeletHasNoDiskPressure"
+                  - "KubeletHasSufficientPID"
+                  - "CiliumIsUp"
+                successText: "Ready"
+                errorText: "{reqsJsonPath[0]['.status.conditions[?(@.status=='False')].reason']['-']} is False"
+                fallbackText: "Unknow"
 
         - type: antdTabs
           data:
@@ -114,29 +121,7 @@ items:
                                       - type: parsedText
                                         data:
                                           id: 21012
-                                          text: "{reqs[0]['metadata', 'name']}"
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 2102
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 21021
-                                          strong: true
-                                          text: "Status"
-
-                                      - type: StatusText
-                                        data:
-                                          id: 4000121221
-                                          requestIndex: 0
-                                          jsonPath: ".status.conditions[?(@.type == 'Ready')].status"
-                                          criteria: equals
-                                          valueToCompare: "True"
-                                          successText: Available
-                                          errorText: Not available
+                                          text: "{reqsJsonPath[0]['.metadata.name']['-']}"
 
                                   - type: antdFlex
                                     data:
@@ -151,8 +136,9 @@ items:
                                           text: "External ID"
                                       - type: parsedText
                                         data:
-                                          id: 21022
-                                          text: "| требуется default | стиль цвета не работает | не понял чей"
+                                          id: 21012
+                                          text: "{reqsJsonPath[0]['.spec.externalID']['-']}"
+
                                   - type: antdFlex
                                     data:
                                       id: 21021
@@ -290,6 +276,7 @@ items:
                                             data:
                                               id: 36022
                                               text: "{reqs[0]['metadata', 'creationTimestamp']}"
+                                              formatter: timestamp
 
                           - type: antdCol
                             data:
@@ -302,6 +289,34 @@ items:
                                   vertical: true
                                   gap: 24
                                 children:
+                                  - type: antdFlex
+                                    data:
+                                      id: 2102
+                                      vertical: true
+                                      gap: 4
+                                    children:
+                                      - type: antdText
+                                        data:
+                                          id: 21021
+                                          strong: true
+                                          text: "Status"
+
+                                      - type: StatusText
+                                        data:
+                                          id: 40001217777
+                                          value: "{reqsJsonPath[0]['.status.conditions[?(@.status=='True')].reason']['-']}"
+                                          criteriaSuccess: equals
+                                          valueToCompareSuccess:
+                                            - "KubeletReady"
+                                          criteriaError: notEquals
+                                          valueToCompareError:
+                                            - "KubeletHasSufficientMemory"
+                                            - "KubeletHasNoDiskPressure"
+                                            - "KubeletHasSufficientPID"
+                                            - "CiliumIsUp"
+                                          successText: "Ready"
+                                          errorText: "{reqsJsonPath[0]['.status.conditions[?(@.status=='True')].reason']['-']}"
+                                          fallbackText: "Unknow"
                                   - type: antdFlex
                                     data:
                                       id: 2201
