--- a/templates/Factory/secret-details.yaml
+++ b/templates/Factory/secret-details.yaml
@@ -185,6 +185,7 @@ items:
                                             data:
                                               id: 36022
                                               text: "{reqs[0]['metadata', 'creationTimestamp']}"
+                                              formatter: timestamp
                                   - type: antdFlex
                                     data:
                                       id: 3600
