--- a/templates/TableUriMapping/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/TableUriMapping/apiextensions.k8s.io.v1.crd.yaml
@@ -3,12 +3,12 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: TableUriMapping
     metadata:
-      name: crd-details
+      name: stock-cluster-crd-details
     spec:
       keysToParse:
         - metadata
         - name
-      id: "default-/apiextensions.k8s.io/v1/customresourcedefinitions"
+      id: "stock-cluster-/apiextensions.k8s.io/v1/customresourcedefinitions"
       pathToNavigate: "/openapi-ui/{clusterName}/factory/crd-details/~recordValue~"
 
 kind: List
