--- a/templates/TableUriMapping/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/TableUriMapping/argoproj.io.v1alpha1.applications.yaml
@@ -3,7 +3,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: TableUriMapping
     metadata:
-      name: "default-argoproj.io.v1alpha1.applications"
+      name: "stock-cluster-default-argoproj.io.v1alpha1.applications"
     spec:
       keysToParse:
         - metadata
@@ -11,8 +11,23 @@ items:
       keysToParseSecond:
         - metadata
         - namespace
-      id: "default-/argoproj.io/v1alpha1/applications"
+      id: "stock-cluster-/argoproj.io/v1alpha1/applications"
       pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: TableUriMapping
+    metadata:
+      name: "stock-namespace-default-argoproj.io.v1alpha1.applications"
+    spec:
+      keysToParse:
+        - metadata
+        - name
+      keysToParseSecond:
+        - metadata
+        - namespace
+      id: "stock-namespace-/argoproj.io/v1alpha1/applications"
+      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
+
 
 kind: List
 metadata:
