--- a/templates/TableUriMapping/v1.namespaces.yaml
+++ b/templates/TableUriMapping/v1.namespaces.yaml
@@ -3,12 +3,12 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: TableUriMapping
     metadata:
-      name: namespace-details
+      name: stock-cluster-namespace-details
     spec:
       keysToParse:
         - metadata
         - name
-      id: "default-/v1/namespaces"
+      id: "stock-cluster-/v1/namespaces"
       pathToNavigate: "/openapi-ui/{clusterName}/factory/namespace-details/~recordValue~"
 
 kind: List
