--- a/templates/TableUriMapping/v1.services.yaml
+++ b/templates/TableUriMapping/v1.services.yaml
@@ -3,7 +3,7 @@ items:
   - apiVersion: front.in-cloud.io/v1alpha1
     kind: TableUriMapping
     metadata:
-      name: service-details
+      name: stock-cluster-service-details
     spec:
       keysToParse:
         - metadata
@@ -11,7 +11,21 @@ items:
       keysToParseSecond:
         - metadata
         - namespace
-      id: "default-/v1/services"
+      id: "stock-cluster-/v1/services"
+      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/service-details/~recordValue~"
+
+  - apiVersion: front.in-cloud.io/v1alpha1
+    kind: TableUriMapping
+    metadata:
+      name: stock-namespace-service-details
+    spec:
+      keysToParse:
+        - metadata
+        - name
+      keysToParseSecond:
+        - metadata
+        - namespace
+      id: "stock-namespace-/v1/services"
       pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/service-details/~recordValue~"
 
 kind: List
